# coding-team-output

./: CHANGELOG.md  Datei: script.js  Datei: script.test.js  README.md  SUMMARY.md  index.html  prime.py  script.js  styles.css  test_prime.py
1. src/: game_window.py
2. assets/: styles.css
20260426-1650-erstelle-eine-c-funktion-die-prft-ob-ein/: SUMMARY.md  output.md
20260426-1705-erstelle-eine-c-funktion-die-prft-ob-ein/: CMakeLists.txt  README.md  SUMMARY.md  prime.cpp
20260426-1705-erstelle-eine-c-funktion-die-prft-ob-ein/src/: main.cpp  prime.cpp  prime.h
20260426-1712-erstelle-eine-c-funktion-die-prft-ob-ein/: README.md  SUMMARY.md  prime.h
20260426-1712-erstelle-eine-c-funktion-die-prft-ob-ein/prime_checker/: CMakeLists.txt  prime.cpp  test_prime.cpp
20260426-1843-we-need-to-produce-a-project-description/: SUMMARY.md  output.md
20260426-1904-we-need-to-produce-a-project-description/: SUMMARY.md  output.md
Datei: assets/: styles.css
Datei: src/: ai.py  game_logic.py  game_window.py
glücksrad-web-app/: 1. CHANGELOG.md  1. index.html  1. script.js  2. README.md  2. styles.css  3. script.js  Datei: index.html  Datei: script.js  Datei: style.css  Datei: styles.css  index.html
glücksrad-web-app/1. src/: game_window.py
glücksrad-web-app/2. assets/: styles.css
glücksrad-web-app/Datei: assets/: styles.css
glücksrad-web-app/Datei: src/: game_logic.py  game_window.py
glücksrad-web-app/Datei: tests/: test_game_window.py
projects/idle/20260426-1945-we-need-to-output-a-project-description/: file_10.sh  file_11.txt  file_12.txt  file_6.txt  file_8.sh  file_9.sh  pyproject.toml
projects/idle/20260426-1945-we-need-to-output-a-project-description/src/dirsize_report/: __init__.py  __main__.py  ignore.py  scanner.py
projects/idle/20260427-0755-we-need-to-produce-a-project-description/: file_4.txt  file_5.txt  file_6.txt  file_8.txt  index.html  script.js  style.css
projects/user/20260427-0501-eine-html-seite-auf-der-man-tictactoe-sp/: README.md  README_1.md  file_1.css  file_2.js  index.html  script.js  script_1.js  style.css  tictactoe.test.js
projects/user/20260429-1247-erstelle-eine-anwendung-die-die-computer/: file_1.sh  file_10.txt  file_2.sh
projects/user/20260429-1247-erstelle-eine-anwendung-die-die-computer/MouseClicker/: App.xaml  App.xaml.cs  ClickService.cs  MainWindow.xaml  MainWindow.xaml.cs  MouseClicker.csproj  NativeMethods.cs
src/: ai.py  game_logic.py  game_window.py  main.py  prime.py
tests/: test_prime.py
