[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirsize-report"
version = "1.0.0"
description = "A command-line tool to analyze directory storage usage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tqdm>=4.65.0",
]

[project.scripts]
dirsize-report = "dirsize_report.__main__:main"

[project.urls]
Homepage = "https://github.com/example/dirsize-report"
Repository = "https://github.com/example/dirsize-report"

[tool.setuptools.packages.find]
where = ["src"]